# ootils-core

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.engine  LICENSE  LIVE_LOOP.md  Makefile  README.md  ROADMAP.md  SECURITY.md  VISION.md  docker-compose.yml  pyproject.toml
.claude/agents/: ootils-architect.md  ootils-backend-dev.md  ootils-db-specialist.md  ootils-doc-writer.md  ootils-orchestrator.md  ootils-pilote.md  ootils-reviewer.md  ootils-test-writer.md
.codex/agents/: ootils-architect.toml  ootils-architecture-reviewer.toml  ootils-backend-dev.toml  ootils-db-specialist.toml  ootils-doc-writer.toml  ootils-orchestrator.toml  ootils-reviewer.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture_discussion.md  war_story.md
.github/workflows/: ci.yml  codeql.yml  rust-build.yml
config/feed-contracts/: on-hand.yaml  open-purchase-orders.yaml  open-work-orders.yaml
data/demand/: buy_program_calendar.template.tsv  line_type_classification.tsv
data/inbox/: README.md
data/templates/: bom_components.template.tsv  bom_header.template.tsv  customer_orders.template.tsv  forecasts.template.tsv  item_planning_params.template.tsv  items.template.tsv  locations.template.tsv  on_hand.template.tsv  purchase_orders.template.tsv  supplier_items.template.tsv  suppliers.template.tsv  transfers.template.tsv
docs/: ADR-002-elastic-time.md  ADR-002b-elastic-time-design.md  ADR-002c-elastic-time-layered.md  ADR-002d-elastic-time-final.md  ADR-003-incremental-propagation.md  ADR-004-explainability.md  ADR-005-storage-layer.md  ADR-006-blockers-resolution.md  ADR-007-showstoppers-resolution.md  ADR-008-agent-operability-fixes.md  ADR-009-import-pipeline.md  ADR-010-ghosts-tags.md  ADR-011-scenario-retention.md  ADR-012-scenario-fork-bulk.md  ADR-013-external-interfaces.md  ADR-014-resources-units-scd2.md  ADR-015-rust-readiness.md  ADR-016-rust-engine-foundation.md  ADR-017-architecture-b-rust-engine-service.md  ADR-018-per-scenario-propagation.md  ADR-019-demand-model-pyramide.md  ADR-020-mrp-consolidation.md  ADR-021-shortage-truth.md  ADR-022-pyramide-reconciliation.md  ADR-023-forecast-confidence.md  ADR-024-foundation-model-routing.md  ADR-025-scenario-param-overlay.md  ADR-026-reschedule-fpo.md  ADR-027-streamchanges-sse.md  ADR-028-drp-fair-share-rounding.md  ADR-029-agent-enterprise-floor.md  ADR-030-proof-machine.md  ADR-031-location-aliases.md  ADR-032-scope-grid-and-budgets.md  ADR-033-demand-routing-and-drift.md  ADR-034-scenario-compare.md  ADR-035-buy-program-segmentation.md  ADR-036-human-window.md  ADR-037-daily-run-and-governed-ingest.md  ADR-039-scenario-archive-cleanup.md  (+73 more)
docs/api/: openapi.json
docs/contracts/: TSV-FILES-SPEC.md
docs/staging-templates/: README.md  bom.md  calendars.md  customer_orders.md  customer_orders.tsv  forecasts.md  forecasts.tsv  items.md  items.tsv  locations.md  locations.tsv  on_hand.md  on_hand.tsv  planning_params.md  purchase_orders.md  purchase_orders.tsv  resources.md  routings.md  supplier_items.md  supplier_items.tsv  suppliers.md  suppliers.tsv  transfers.md  transfers.tsv  work_orders.md  work_orders.tsv
examples/: simple_propagation.py
poc/rust_kernel/: Cargo.toml  bench_python.py  extract_data.py
poc/rust_kernel/data/: buckets.jsonl
poc/rust_kernel/src/: main.rs
rust/: .gitignore  Cargo.toml
rust/ootils_engine/: Cargo.toml
rust/ootils_engine/src/: kernel.rs  loader.rs  main.rs  metrics.rs  propagator.rs  propagator_scenario.rs.skeleton  scenario.rs  service.rs  state.rs  wal.rs  write_behind.rs
rust/ootils_kernel/: .gitignore  Cargo.toml  pyproject.toml
rust/ootils_kernel/src/: io.rs  kernel.rs  lib.rs  pool.rs  propagator.rs  writeback.rs
rust/ootils_proto/: Cargo.toml  build.rs
rust/ootils_proto/proto/: engine.proto
rust/ootils_proto/src/: lib.rs
scripts/: _run_full_scope.sh  agent_dq_watcher.py  agent_eando_watcher.py  agent_forecast_watcher.py  agent_governance.py  agent_lot_policy_watcher.py  agent_material_watcher.py  agent_reschedule_watcher.py  agent_shortage_watcher.py  agent_simulation.py  agent_subscribe.py  agent_transfer_watcher.py  backup_offhost.sh  backup_postgres.sh  bench_agent_workload.py  bench_engine_comparison.py  bench_incremental.py  bench_mcts_tree.py  bench_mrp.py  bench_propagation.py  bench_reconciliation.py  bench_scenario_fork.py  bootstrap_pi.py  bulk_ingest.py  chaos_test_baseline.py  chaos_test_multi_user.py  compute_asp.py  compute_cost_rollup.py  compute_llc.py  compute_pi_sql.py  daily_load.py  daily_recompute.py  demo_e2e.py  demo_phase1_e2e.py  deposit_outbox.sh  evaluate_outcomes.py  export_approved_pos.py  export_openapi.py  fix_wireup.py  forecast_autoets_poc.py  (+44 more)
src/ootils_core/: __init__.py  constants.py  scd2.py
tests/: conftest.py  conftest_hypothesis.py  test_agent_subscribe.py  test_agent_tools.py  test_allocation_engine.py  test_app_middlewares.py  test_atp_api.py  test_atp_engine.py  test_auth.py  test_auth_principal.py  test_bootstrap_pi_unit.py  test_c2_migration_088_contract.py  test_calc_run.py  test_calendar.py  test_consumption_window.py  test_coverage_gaps.py  test_crp_engine.py  test_crp_integration.py  test_crp_models.py  test_daily_orchestrator.py  test_daily_recompute_cli.py  test_daily_report.py  test_daily_run_decision.py  test_daily_run_guards.py  test_db_connection.py  test_demo_e2e_helpers.py  test_dependencies.py  test_descent_run.py  test_descent_shares.py  test_dirty_flags.py  test_dq_agent.py  test_dq_engine.py  test_dq_impact_scorer.py  test_dq_l3_rules.py  test_dq_l4_rules.py  test_dq_llm_reporter.py  test_dq_stat_rules.py  test_dq_temporal_rules.py  test_drp_core_golden.py  test_drp_models.py  (+110 more)
tests/engine_service/: __init__.py  conftest.py  test_agent_workflow.py  test_api_contract.py  test_backpressure.py  test_concurrency.py  test_correctness.py  test_edge_cases.py  test_multi_user_bench.py  test_per_scenario_propagation.py  test_performance_regression.py  test_pg_failure.py  (+3 more)
(+440 files in other folders)
