[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ootils-core"
version = "0.1.0"
description = "The first supply chain decision engine designed for the age of AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ngoineau" }]
keywords = ["supply-chain", "decision-engine", "ai-agents", "inventory", "procurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Compatible-release pins (PEP 440 `~=`): allow minor + patch updates, block
# the next major. Dependabot opens PRs weekly to bump within these ranges.
# See docs/REVIEW-2026-05.md R4.
dependencies = [
    "fastapi ~= 0.128",
    "uvicorn[standard] ~= 0.40",
    "psycopg[binary] ~= 3.3",
    "psycopg-pool ~= 3.3",
    "pydantic ~= 2.12",
    "openai ~= 2.15",
]

[project.optional-dependencies]
dev = ["pytest ~= 9.0", "pytest-cov ~= 7.1", "httpx ~= 0.28"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ootils_core" = ["db/migrations/*.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "smoke: marks tests as smoke tests",
    "critical: marks tests as critical path",
    "requires_db: marks tests that require a live DB connection",
]

[tool.coverage.run]
source = ["src/ootils_core"]
branch = true
omit = [
    "src/ootils_core/demo/*",  # demo scripts — covered by e2e tests, not unit
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
# Permissive baseline — every module should pass today's checks. We intentionally
# do NOT enable strict mode yet because the codebase has untyped boundaries
# (psycopg row dicts, dynamic SQL helpers). Tighten one rule at a time.
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
