[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ootils-core"
version = "0.1.0"
description = "The first supply chain decision engine designed for the age of AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ngoineau" }]
keywords = ["supply-chain", "decision-engine", "ai-agents", "inventory", "procurement"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
# Compatible-release pins (PEP 440 `~=`): allow minor + patch updates, block
# the next major. Dependabot opens PRs weekly to bump within these ranges.
# See docs/REVIEW-2026-05.md R4.
dependencies = [
    "fastapi ~= 0.128",
    "uvicorn[standard] ~= 0.40",
    "psycopg[binary] ~= 3.3",
    "psycopg-pool ~= 3.3",
    "pydantic ~= 2.12",
    "openai ~= 2.15",
    "slowapi ~= 0.1",
    # Staging file parsers (ADR-013): TSV/CSV via stdlib csv, XLSX via openpyxl.
    "openpyxl ~= 3.1",
    "python-multipart ~= 0.0.20",  # FastAPI file uploads (multipart/form-data)
    # gRPC client to the Rust propagation engine (src/ootils_core/engine_rust_service).
    # client.py / generated _grpc stubs import grpc + protobuf at module level;
    # stubs are generated with protobuf 6.31, so pin the 6.x runtime.
    "grpcio ~= 1.71",
    "protobuf ~= 6.31",
]

[project.optional-dependencies]
dev = ["pytest ~= 9.0", "pytest-cov ~= 7.1", "httpx ~= 0.28"]
forecast = [
    "statsforecast ~= 2.0",
    "mlforecast ~= 1.0",
    "lightgbm ~= 4.0",
    "pandas >= 2.3,< 4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"ootils_core" = ["db/migrations/*.sql"]

[tool.ruff]
# Generated gRPC/protobuf stubs are not hand-maintained — never lint them
# (E402 module-import-order, F401 unused re-exports are inherent to protoc output).
extend-exclude = ["src/ootils_core/_grpc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
    "smoke: marks tests as smoke tests",
    "critical: marks tests as critical path",
    "requires_db: marks tests that require a live DB connection",
    "live_db: tests that need a real Postgres + ootils-engine binary (engine_service battery)",
]

[tool.coverage.run]
source = ["src/ootils_core"]
branch = true
omit = [
    "src/ootils_core/demo/*",  # demo scripts — covered by e2e tests, not unit
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.mypy]
# Permissive baseline — every module should pass today's checks. We intentionally
# do NOT enable strict mode yet because the codebase has untyped boundaries
# (psycopg row dicts, dynamic SQL helpers). Tighten one rule at a time.
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
