[package]
name = "ootils_engine"
version.workspace = true
edition.workspace = true
description = "ootils-core Rust engine service (ADR-017 Architecture B)"
publish = false

[[bin]]
name = "ootils-engine"
path = "src/main.rs"

[dependencies]
# Internal
ootils_proto = { path = "../ootils_proto" }

# Async runtime
tokio.workspace = true
tokio-stream = "0.1"
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

# State + concurrency
arc-swap.workspace = true
dashmap.workspace = true
ahash.workspace = true
parking_lot.workspace = true

# Domain
rust_decimal.workspace = true
chrono.workspace = true
uuid.workspace = true

# Postgres
tokio-postgres.workspace = true

# Observability
tracing.workspace = true
tracing-subscriber.workspace = true

# Errors
anyhow.workspace = true
thiserror.workspace = true

# Compute primitives (used in later phases)
rayon.workspace = true
bumpalo.workspace = true

# Global allocator — mimalloc beats the system allocator on multi-threaded
# workloads (5-15% on Postgres-driven services per benchmarks).
mimalloc = { version = "0.1", default-features = false }

# WAL serialization — bincode is fastest stable Rust serializer for
# our use (typed records, append-only). Bincode 1.x is the mature
# release; 2.x would mean tracking changes for marginal gain.
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

# Misc
clap = { version = "4.5", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3.12"

# Item #2 — Prometheus exposition + Item #1 — TLS/auth + Item #3 — OTLP
# Group dep additions here for visibility.
[dependencies.hyper]
version = "1.4"
features = ["http1", "server"]

[dependencies.hyper-util]
version = "0.1"
features = ["tokio", "server-auto"]

[dependencies.http-body-util]
version = "0.1"

[dependencies.bytes]
version = "1.7"

# F-062 audit closure: removed dead `otlp` and `tls` feature flags +
# their optional deps. They were declared but never referenced in
# code (no #[cfg(feature = "otlp")] / "tls" anywhere). The deps stayed
# unconditional in Cargo's resolution graph anyway since features
# were never activated, making them pure manifest noise. When TLS or
# OTLP land for real they can be re-added with a matching wiring in
# main.rs.

[features]
default = []
