[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ootils-kernel"
version = "0.2.0"
description = "Rust kernel for ootils-core — propagation hot path (ADR-016)"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "ngoineau" }]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
# abi3 wheels are forward-compatible: build once, runs on Python 3.11, 3.12, 3.13+
features = ["pyo3/extension-module", "pyo3/abi3-py311"]
# Crate lives at the same directory as this pyproject.toml
manifest-path = "Cargo.toml"
# Module name as imported from Python: `import ootils_kernel`
module-name = "ootils_kernel"
# Strip debug info from release builds
strip = true
